--- a/mobisoftapi/mobisoftapi/src/main/resources/application.properties
+++ b/mobisoftapi/mobisoftapi/src/main/resources/application.properties
@@ -1,7 +1,14 @@
-spring.application.name=mobisoftapi
-
 spring.datasource.url=jdbc:postgresql://localhost:5432/mobisoft
-spring.datasource.username=mobisoft
-spring.datasource.password=root
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.username=postgres
+spring.datasource.password=123
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
+
+management.endpoints.web.exposure.include=*
+management.endpoints.web.base-path=/actuator
+management.endpoint.health.show-details=always
+management.endpoint.health.probes.enabled=true
+
+spring.jpa.properties.hibernate.format_sql=true
+server.port=8081
