--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,5 @@ management.endpoint.health.probes.enabled=true
 
 spring.jpa.properties.hibernate.format_sql=true
 server.port=8081
+
+api.security.token.secret=${JWT_SECRET:my-secret-key}
