--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -1,1 +1,12 @@
+name: Deploy Application MobiSoft
 
+on:
+    push:
+        branches: [main]
+
+jobs:
+    build:
+        runs-on: ubuntu-latest
+        steps:
+            - name: Checkout code
+              uses: actions/checkout@v3
