--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -10,3 +10,11 @@ jobs:
         steps:
             - name: Checkout code
               uses: actions/checkout@v3
+              
+            - name: Setup Java
+              uses: actions/setup-java@v3
+              with:
+                distribution: 'temurin'
+                java-version: '17'
+            - name: Build project
+              run: mvn clean install -DskipTests
