Atualização do prod.yml

--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -10,7 +10,7 @@ jobs:
         steps:
             - name: Checkout code
               uses: actions/checkout@v3
-              
+
             - name: Setup Java
               uses: actions/setup-java@v3
               with:
@@ -18,3 +18,9 @@ jobs:
                 java-version: '17'
             - name: Build project
               run: mvn clean install -DskipTests
+            - name: Login Docker Hub
+              run: docker login -u ${{secrets.DOCKER_USERNAME}} -p ${{secrets.DOCKER_PASSWORD}}
+            - name: Build docker image
+              run: docker build -t danieleleaoe/deploy_ghactions .
+            - name: Push image docker
+              run: docker push anabeanzini/mobisoftapi .
