--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -24,3 +24,12 @@ jobs:
         run: docker build -t anabeanzini/mobisoftapi .
       - name: Push image docker
         run: docker push anabeanzini/mobisoftapi
+
+    deploy:
+      needs: build
+      runs-on: self-hosted
+      steps:
+        - name: Pull image from Docker Hub
+          run: docker pull anabeanzini/mobisoftapi:latest
+        - name: Run docker container
+          run: docker run -d -p 8080:8080 --name deploy_mobisoft anabeanzini/mobisoftapi
