--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -26,11 +26,9 @@ jobs:
         run: docker push anabeanzini/mobisoftapi
 
   deploy:
-    needs: build
-    runs-on: self-hosted
-    steps:
-      - name: Pull image from docker hub
-        run: docker pull anabeanzini/mobisoftapi:latest
-      - name: Run docker container
-        run: docker run -d -p 8080:8080 --name mobisoftapi anabeanzini/mobisoftapi
+      needs: build
+      runs-on: self-hosted
+      steps:
+        - name: Pull image from docker hub
+          run: sudo docker pull ${{ secrets.DOCKER_USERNAME }}/mobisoftapi:latest
   
