--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -30,5 +30,7 @@ jobs:
       runs-on: self-hosted
       steps:
         - name: Pull image from docker hub
-          run: sudo docker pull ${{ secrets.DOCKER_USERNAME }}/mobisoftapi:latest
+          run: sudo docker pull anabeanzini/mobisoftapi:latest
+        - name: Run docker container
+          run: docker run -d -p 8080:8080 --name mobisoftapi anabeanzini/mobisoftapi
   
