Alterações de properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,5 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 server.servlet.context-path=/api
+
+api.security.token.secret=${JWT_SECRET:my-secret-key}
