--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,16 @@
-spring.application.name=mobisoftapi
-
-spring.datasource.database=POSTGRESQL
-spring.datasource.platform=postgres
-spring.datasource.url=${DATABASE_URL}
-spring.datasource.username=${DATABASE_USERNAME}
-spring.datasource.password=${DATABASE_PASSWORD}
-spring.jpa.show-sql=true
-spring.jpa.generate-ddl=true
+spring.datasource.url=jdbc:postgresql://localhost:5432/mobisoft
+spring.datasource.username=postgres
+spring.datasource.password=123
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
-server.servlet.context-path=/api
+management.endpoints.web.exposure.include=*
+management.endpoints.web.base-path=/actuator
+management.endpoint.health.show-details=always
+management.endpoint.health.probes.enabled=true
+
+spring.jpa.properties.hibernate.format_sql=true
+server.port=8081
 
 api.security.token.secret=${JWT_SECRET:my-secret-key}
