--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,9 @@
         
         <sonar.organization>ana-anzini</sonar.organization>
   		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
+    	<sonar.projectKey>com.mobisoft:mobisoftapi</sonar.projectKey>
+    	<sonar.junit.reportPaths>target/test-classes</sonar.junit.reportPaths>
+    	<sonar.coverage.jacoco.xmlReportPaths>target/jacoco-ut/report.xml</sonar.coverage.jacoco.xmlReportPaths>
     </properties>
     <dependencies>
         <dependency>
@@ -97,6 +100,33 @@
 
     <build>
         <plugins>
+			<plugin>
+			    <groupId>org.apache.maven.plugins</groupId>
+			    <artifactId>maven-surefire-plugin</artifactId>
+			    <version>3.0.0-M7</version>
+			    <configuration>
+			        <reportsDirectory>target/test-classes/</reportsDirectory>
+			    </configuration>
+			</plugin>
+			<plugin>
+			    <groupId>org.jacoco</groupId>
+			    <artifactId>jacoco-maven-plugin</artifactId>
+			    <version>0.8.8</version>
+			    <executions>
+			        <execution>
+			            <goals>
+			                <goal>prepare-agent</goal>
+			            </goals>
+			        </execution>
+			        <execution>
+			            <id>report</id>
+			            <phase>test</phase>
+			            <goals>
+			                <goal>report</goal>
+			            </goals>
+			        </execution>
+			    </executions>
+			</plugin>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
