--- a/pom.xml
+++ b/pom.xml
@@ -105,7 +105,9 @@
 			    <artifactId>maven-surefire-plugin</artifactId>
 			    <version>3.0.0-M7</version>
 			    <configuration>
-			        <reportsDirectory>target/test-classes/</reportsDirectory>
+			        <includes>
+			            <include>**/*Test.java</include>
+			        </includes>
 			    </configuration>
 			</plugin>
 			<plugin>
